# tugboat

./: Cargo.toml  LICENSE  README.md
src/: app.rs  docker.rs  keybindings.rs  main.rs  maxSlidingWindow.rs  max_sliding_window.rs  ui.rs
src/snapshots/: Tugboat__ui__tests__draw_ui_context_mode_snapshot.snap  Tugboat__ui__tests__draw_ui_context_mode_snapshot.snap.new  Tugboat__ui__tests__draw_ui_help_mode_snapshot.snap  Tugboat__ui__tests__draw_ui_log_mode_snapshot.snap  Tugboat__ui__tests__draw_ui_normal_mode_snapshot.snap  Tugboat__ui__tests__draw_ui_search_mode_snapshot.snap  Tugboat__ui__tests__draw_ui_search_normal_mode_snapshot.snap  Tugboat__ui__tests__draw_ui_stats_mode_snapshot.snap
