[package]
name = "Tugboat"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
crossterm = "0.29.0"
futures = "0.3.31"
ratatui = "0.29.0"
shiplift = "0.7.0"
smart-default = "0.7.1"
strip-ansi-escapes = "0.2.1"
tokio = { version = "1", features = ["full"]}

[dev-dependencies]
chrono = "0.4.40"
crossterm = "0.29.0"
insta = "1.42.2"
ratatui = "0.29.0"

